--- a/.github/workflows/create-artifacts.yml
+++ b/.github/workflows/create-artifacts.yml
@@ -6,7 +6,7 @@ jobs:
   test:
     name: Test Code
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install dependencies
         run: bun install
+        working-directory: ./create-artifacts-javascripapplication
 
       - name: Test with different seeds
         run: |
